anchor/programs/voble/build_log.txt
    Checking voble v0.1.0 (/home/zaialamm/voble/anchor/programs/voble)
error[E0428]: the name `start_game` is defined multiple times
 --> programs/voble/src/instructions/game/mod.rs:8:1
  |
2 | pub mod start_game;
  | ------------------- previous definition of the module `start_game` here
...
8 | pub mod start_game;
  | ^^^^^^^^^^^^^^^^^^^ `start_game` redefined here
  |
  = note: `start_game` must be defined only once in the type namespace of this module

error[E0428]: the name `submit_guess` is defined multiple times
 --> programs/voble/src/instructions/game/mod.rs:9:1
  |
3 | pub mod submit_guess;
  | --------------------- previous definition of the module `submit_guess` here
...
9 | pub mod submit_guess;
  | ^^^^^^^^^^^^^^^^^^^^^ `submit_guess` redefined here
  |
  = note: `submit_guess` must be defined only once in the type namespace of this module

error[E0428]: the name `update_player_stats` is defined multiple times
  --> programs/voble/src/instructions/game/mod.rs:10:1
   |
 4 | pub mod update_player_stats;
   | ---------------------------- previous definition of the module `update_player_stats` here
...
10 | pub mod update_player_stats;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `update_player_stats` redefined here
   |
   = note: `update_player_stats` must be defined only once in the type namespace of this module

error[E0432]: unresolved import `word_selection::select_word_for_session`
  --> programs/voble/src/instructions/game/mod.rs:25:45
   |
25 | pub use word_selection::{get_word_by_index, select_word_for_session};
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^ no `select_word_for_session` in `instructions::game::word_selection`

error[E0432]: unresolved import `achievements`
  --> programs/voble/src/instructions/game/mod.rs:13:9
   |
13 | pub use achievements::*;
   |         ^^^^^^^^^^^^ use of unresolved module or unlinked crate `achievements`
   |
help: to make use of source file programs/voble/src/instructions/game/achievements.rs, use `mod achievements` in this file to declare the module
  --> programs/voble/src/lib.rs:1:1
   |
 1 + mod achievements;
   |

error[E0432]: unresolved import `achievements`
  --> programs/voble/src/instructions/game/mod.rs:23:9
   |
23 | pub use achievements::{check_and_unlock_achievements, get_unlocked_count};
   |         ^^^^^^^^^^^^ use of unresolved module or unlinked crate `achievements`
   |
help: to make use of source file programs/voble/src/instructions/game/achievements.rs, use `mod achievements` in this file to declare the module
  --> programs/voble/src/lib.rs:1:1
   |
 1 + mod achievements;
   |

warning: unexpected `cfg` condition value: `custom-heap`
  --> programs/voble/src/lib.rs:30:1
   |
30 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `feature` are: `anchor-debug`, `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
   = note: using a cfg inside a macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `$crate::custom_heap_default` crate for guidance on how handle this unexpected cfg
   = help: the macro `$crate::custom_heap_default` may come from an old version of the `solana_program_entrypoint` crate, try updating your dependency with `cargo update -p solana_program_entrypoint`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the macro `$crate::custom_heap_default` which comes from the expansion of the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `solana`
  --> programs/voble/src/lib.rs:30:1
   |
30 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `target_os` are: `aix`, `amdhsa`, `android`, `cuda`, `cygwin`, `dragonfly`, `emscripten`, `espidf`, `freebsd`, `fuchsia`, `haiku`, `hermit`, `horizon`, `hurd`, `illumos`, `ios`, `l4re`, `linux`, `lynxos178`, `macos`, `netbsd`, `none`, `nto`, `nuttx`, `openbsd`, `psp`, `psx`, `redox`, `rtems`, `solaris`, `solid_asp3`, `teeos`, `trusty`, `tvos`, and `uefi` and 9 more
   = note: using a cfg inside a macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `$crate::custom_heap_default` crate for guidance on how handle this unexpected cfg
   = help: the macro `$crate::custom_heap_default` may come from an old version of the `solana_program_entrypoint` crate, try updating your dependency with `cargo update -p solana_program_entrypoint`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the macro `$crate::custom_heap_default` which comes from the expansion of the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `custom-panic`
  --> programs/voble/src/lib.rs:30:1
   |
30 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `feature` are: `anchor-debug`, `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
   = note: using a cfg inside a macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `$crate::custom_panic_default` crate for guidance on how handle this unexpected cfg
   = help: the macro `$crate::custom_panic_default` may come from an old version of the `solana_program_entrypoint` crate, try updating your dependency with `cargo update -p solana_program_entrypoint`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the macro `$crate::custom_panic_default` which comes from the expansion of the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `solana`
  --> programs/voble/src/lib.rs:30:1
   |
30 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `target_os` are: `aix`, `amdhsa`, `android`, `cuda`, `cygwin`, `dragonfly`, `emscripten`, `espidf`, `freebsd`, `fuchsia`, `haiku`, `hermit`, `horizon`, `hurd`, `illumos`, `ios`, `l4re`, `linux`, `lynxos178`, `macos`, `netbsd`, `none`, `nto`, `nuttx`, `openbsd`, `psp`, `psx`, `redox`, `rtems`, `solaris`, `solid_asp3`, `teeos`, `trusty`, `tvos`, and `uefi` and 9 more
   = note: using a cfg inside a macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `$crate::custom_panic_default` crate for guidance on how handle this unexpected cfg
   = help: the macro `$crate::custom_panic_default` may come from an old version of the `solana_program_entrypoint` crate, try updating your dependency with `cargo update -p solana_program_entrypoint`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the macro `$crate::custom_panic_default` which comes from the expansion of the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `anchor_lang::prelude::*`
 --> programs/voble/src/lib.rs:2:5
  |
2 | use anchor_lang::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: use of deprecated method `anchor_lang::prelude::AccountInfo::<'a>::realloc`: Use AccountInfo::resize() instead
  --> programs/voble/src/lib.rs:30:1
   |
30 | #[program]
   | ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0428, E0432.
For more information about an error, try `rustc --explain E0428`.
warning: `voble` (lib) generated 6 warnings
error: could not compile `voble` (lib) due to 6 previous errors; 6 warnings emitted
